Updated Timer and Stopwatch's logic. Added ParentPageFragment.java

--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -29,17 +29,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:text="In progress..."
-                android:textStyle="bold"
-                android:textSize="45sp"
-                android:layout_weight="1"
+            <LinearLayout
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:background="@drawable/no_background_border"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="30dp"
-                tools:ignore="HardcodedText" />
+                android:layout_height="wrap_content">
 
-<!--            <LinearLayout-->
+                <TextView
+                    android:textSize="27sp"
+                    android:fontFamily="@font/zalando_sans_bold"
+                    android:text="@string/widgets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/limit_input"
+                        android:layout_width="288dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/zalando_sans_bold"
+                        android:hint="@string/rng_limit"
+                        android:inputType="number"
+                        android:textSize="30sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
+            <!--            <LinearLayout-->
 <!--                android:background="@drawable/no_background_border"-->
 <!--                android:padding="10dp"-->
 <!--                android:layout_marginBottom="15dp"-->
