--- a/app/src/main/res/layout/fragment_notepad_editor.xml
+++ b/app/src/main/res/layout/fragment_notepad_editor.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <HorizontalScrollView
+        android:id="@+id/action_buttons_hsv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
