--- a/app/src/main/res/drawable/background_with_border.xml
+++ b/app/src/main/res/drawable/background_with_border.xml
@@ -2,7 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:centerColor="?attr/colorAccent" android:centerX="@integer/material_motion_duration_long_1" />
+            <gradient
+                android:startColor="?attr/colorAccent"
+                android:centerColor="@android:color/transparent"
+                android:endColor="@android:color/transparent"
+                android:type="linear"
+                android:angle="45"
+                android:centerX="0.8" />
             <corners android:radius="15dp" />
             <stroke android:color="?attr/colorOutline" android:width="3dp"/>
         </shape>
