--- a/app/src/main/res/drawable/red_background_with_border.xml
+++ b/app/src/main/res/drawable/red_background_with_border.xml
@@ -2,8 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
+            <gradient
+                android:startColor="?attr/colorAccent"
+                android:centerColor="@android:color/transparent"
+                android:endColor="@android:color/transparent"
+                android:centerX="0.85" />
             <corners android:radius="15dp" />
-            <gradient android:startColor="?attr/colorTertiary" android:centerColor="@android:color/transparent" android:endColor="@android:color/transparent"/>
             <stroke android:width="1dp" android:color="?attr/colorOutline" />
         </shape>
     </item>
