--- a/app/src/main/res/layout/fragment_rand_num.xml
+++ b/app/src/main/res/layout/fragment_rand_num.xml
@@ -47,7 +47,8 @@
 
         <com.app.toolbox.view.AnimatedButton
             android:id="@+id/generate_button"
-            android:layout_width="150dp"
+            android:minWidth="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_margin="2dp"
             android:layout_gravity="center"
