--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -37,7 +37,8 @@
 
         <com.app.toolbox.view.AnimatedButton
             android:id="@+id/start_button"
-            android:layout_width="150dp"
+            android:minWidth="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_margin="2dp"
             app:highlighted="false"
@@ -49,7 +50,8 @@
         <com.app.toolbox.view.AnimatedButton
             android:id="@+id/reset_button"
             android:layout_margin="2dp"
-            android:layout_width="153dp"
+            android:minWidth="150dp"
+            android:layout_width="wrap_content"
             android:background="@drawable/background_with_border"
             android:layout_height="60dp"
             android:text="@string/reset"
@@ -60,7 +62,8 @@
 
         <com.app.toolbox.view.AnimatedButton
             android:id="@+id/stop_button"
-            android:layout_width="150dp"
+            android:minWidth="150dp"
+            android:layout_width="wrap_content"
             android:layout_margin="2dp"
             android:layout_height="60dp"
             android:background="@drawable/background_with_border"
