--- a/app/src/main/res/layout/timer_setter.xml
+++ b/app/src/main/res/layout/timer_setter.xml
@@ -40,7 +40,8 @@
 
         <com.app.toolbox.view.AnimatedButton
             android:id="@+id/start_timer_button"
-            android:layout_width="120dp"
+            android:minWidth="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="2dp"
             android:layout_gravity="center"
