Updated configuration and resource files. Removed unused code.

--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -1,65 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <ScrollView
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_margin="10dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content">
 
 <!--            START OF SETTINGS ELEMENTS-->
 
-            <com.app.toolbox.view.TitleView
-                android:layout_marginBottom="10dp"
-                android:text="@string/toolbox_settings"
-                android:background="@drawable/no_background_border"
-                android:paddingStart="10dp"
-                android:paddingEnd="6dp"
-                android:maxLines="2"
-                android:layout_width="match_parent"
+        <com.app.toolbox.view.TitleView
+            android:layout_marginBottom="10dp"
+            android:text="@string/toolbox_settings"
+            android:background="@drawable/no_background_border"
+            android:paddingStart="10dp"
+            android:paddingEnd="6dp"
+            android:maxLines="2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:background="@drawable/no_background_border"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textSize="27sp"
+                android:fontFamily="@font/zalando_sans_bold"
+                android:text="@string/widgets"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:background="@drawable/no_background_border"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:textSize="27sp"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/limit_input"
+                    android:layout_width="288dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/zalando_sans_bold"
-                    android:text="@string/widgets"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:hint="@string/rng_limit"
+                    android:inputType="number"
+                    android:textSize="30sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+        </LinearLayout>
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/limit_input"
-                        android:layout_width="288dp"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/zalando_sans_bold"
-                        android:hint="@string/rng_limit"
-                        android:inputType="number"
-                        android:textSize="30sp" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-
-            <!--            <LinearLayout-->
+        <!--            <LinearLayout-->
 <!--                android:background="@drawable/no_background_border"-->
 <!--                android:padding="10dp"-->
 <!--                android:layout_marginBottom="15dp"-->
@@ -134,64 +129,63 @@
 <!--                    android:layout_height="wrap_content" />-->
 <!--            </LinearLayout>-->
 
-            <LinearLayout
-                android:background="@drawable/no_background_border"
-                android:padding="10dp"
-                android:layout_marginBottom="15dp"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+        <LinearLayout
+            android:background="@drawable/no_background_border"
+            android:padding="10dp"
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-                <TextView
-                    android:layout_marginBottom="10dp"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/zalando_sans_bold"
-                    android:text="@string/about_toolbox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/app_version"
-                    android:fontFamily="@font/pt_mono_regular"
-                    android:textSize="15sp"
-                    android:text="@string/app_version"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:fontFamily="@font/pt_mono_regular"
-                    android:textSize="15sp"
-                    android:text="@string/developer_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:fontFamily="@font/pt_mono_regular"
-                    android:textSize="15sp"
-                    android:text="@string/contact_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/copyright_view"
-                    android:fontFamily="@font/pt_mono_regular"
-                    android:textSize="15sp"
-                    android:text="© "
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:ignore="HardcodedText" />
-
-            </LinearLayout>
-
-            <com.app.toolbox.view.AnimatedButton
-                android:id="@+id/back_button"
-                android:text="@string/back"
+            <TextView
+                android:layout_marginBottom="10dp"
                 android:textSize="25sp"
-                android:background="@drawable/background_with_border"
-                android:layout_width="170dp"
-                android:layout_height="50dp" />
+                android:fontFamily="@font/zalando_sans_bold"
+                android:text="@string/about_toolbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-            <!--            END OF SETTINGS ELEMENTS-->
+            <TextView
+                android:id="@+id/app_version"
+                android:fontFamily="@font/pt_mono_regular"
+                android:textSize="15sp"
+                android:text="@string/app_version"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:fontFamily="@font/pt_mono_regular"
+                android:textSize="15sp"
+                android:text="@string/developer_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:fontFamily="@font/pt_mono_regular"
+                android:textSize="15sp"
+                android:text="@string/contact_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/copyright_view"
+                android:fontFamily="@font/pt_mono_regular"
+                android:textSize="15sp"
+                android:text="© "
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:ignore="HardcodedText" />
+
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+
+        <com.app.toolbox.view.AnimatedButton
+            android:id="@+id/back_button"
+            android:text="@string/back"
+            android:textSize="25sp"
+            android:background="@drawable/background_with_border"
+            android:layout_width="170dp"
+            android:layout_height="50dp" />
+
+        <!--            END OF SETTINGS ELEMENTS-->
+    </LinearLayout>
+</ScrollView>
